--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello, Github Pages
+<!-- vim:set et sw=2 :-->
+<html>
+  <head>
+    <title>Webpack demo</title>
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="https://api.trello.com/1/client.js"></script>
+    <script src="dist/bundle.js"></script>
+  </head>
+  <body>
+    <h1>Autotrello</h1>
+    <p>This is a work in progress so the interface is a bit clunky.</p>
+    Paste your trello API key here: <input id="apikey"></input>
+    <button id="loginbutton">Log in</button>
+    <hr>
+    <div id="menu">Menu will appear here after you authenticate.</div>
+    <hr>
+    <ol id="log"></ol>
+  </body>
+</html>
